# AutoStock

./: .env.example  .gitignore  CONTEXT.md  Dockerfile  README.md  dev_plan.md  frontend.md  tmp.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py  tavily_service.py  usage.py
backend/app/api/: data.py  dependencies.py  market.py  prompts.py  providers.py  sessions.py  simulator.py  tavily.py  tools.py  usage.py  view.py  ws.py
backend/app/core/: config.py  websocket_manager.py
backend/app/llm/: base.py  deepseek.py  openai_compatible.py  raw_logger.py  registry.py
backend/app/market/: __init__.py  akshare_provider.py  names.py  normalizer.py  replay.py  stock_data_logger.py  sync_service.py
backend/app/scheduler/: __init__.py  account_valuation.py  market_sync.py
backend/app/sessions/: __init__.py  ledger.py  prompt_rendering.py  provider_turn.py  runtime.py  tool_turn.py
backend/app/simulator/: __init__.py  engine.py  replay_clock.py  rules.py  valuation.py
backend/app/storage/: duckdb.py  sqlite.py
backend/app/tools/: __init__.py  executor.py  market_tools.py  order_tools.py  portfolio_tools.py  registry.py  tavily_tools.py
backend/tests/: test_market.py  test_mvp.py  test_raw_logger.py  test_replay_clock.py  test_session_run_modules.py  test_simulator.py  test_tavily.py  test_usage.py  test_view.py
config/: default.yaml
docs/: feat_0515.md  feat_0516.md  issues.md  sync.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx  api.ts  mockData.ts  styles.css  (+1 more)
(+40 files in other folders)
