[project]
name = "autostock-backend"
version = "0.1.0"
description = "A-share LLM simulated trading webchat backend"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.0",
    "openai>=2.9.0",
    "httpx>=0.28.0",
    "akshare>=1.18.0",
    "duckdb>=1.4.0",
    "pandas>=2.3.0",
    "tavily-python>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
